@@ -25,6 +25,10 @@ Library
 Extension Modules
 -----------------
 
+- Bug #1521375: The code in ctypes.util.find_library was
+  run with root priviledges, it could overwrite or delete
+  /dev/null in certain cases; this is now fixed.
+
 - Bug #1467450: On Mac OS X 10.3, RTLD_GLOBAL is now used as the
   default mode for loading shared libraries in ctypes.
 
